@@ -1,4 +1,8 @@
-﻿drkns 09.01.2014 00:20:44 +0200 - build 3765
+﻿shmuel 11.01.2014 23:43:43 +0200 - build 3766
+
+1. M#2551: Object.Height/Width не работают в меню.
+
+drkns 09.01.2014 00:20:44 +0200 - build 3765
 
 1. Уточнение 3752 для плагиновых панелей.
 
